# me-view

./: .gitignore  README.md  package-lock.json  package.json
backend/: README.md  pyproject.toml
backend/src/me_view/: __init__.py  config.py  main.py
backend/src/me_view/api/: health.py  plots.py  sessions.py
backend/src/me_view/models/: common.py  session.py
backend/src/me_view/services/: sessions.py
backend/tests/: test_sessions.py
docs/: api.md  architecture.md  state-model.md  ui.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
frontend/src/components/: ControlBar.jsx  InspectorPanel.jsx  NiiVueCanvas.jsx  PlotPanel.jsx  ReviewPanel.jsx  SessionBanner.jsx  TimeSliderPanel.jsx  UploadPanel.jsx  ViewerWorkspace.jsx
frontend/src/lib/: api.js  colormaps.js  time.js
frontend/src/state/: app-state.jsx
