[project]
name = "me-view-backend"
version = "0.1.0"
description = "FastAPI backend for a local multi-echo fMRI viewer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.116.0",
  "nibabel>=5.3.0",
  "numpy>=2.2.0",
  "pydantic>=2.11.0",
  "python-multipart>=0.0.20",
  "uvicorn>=0.35.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/me_view"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
